--- a/blackwater/pom.xml
+++ b/blackwater/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>1.5.21.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>blackwater</groupId>
+    <groupId>com.blackwater</groupId>
     <artifactId>blackwater</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>blackwater</name>
